# infographics-workbook

./: README.md
tp1-reperes/src/: CMakeLists.txt  Camera.h  Etat.cpp  Etat.h  Helicoptere.h  Pipeline.h  inf2705-nuanceur.h  inf2705-theiere.h  main.cpp  makefile  remise.bat  touches.txt  tp1_reperes.sln  tp1_reperes.vcxproj
tp1-reperes/src/build-Darwin/tp1_reperes.exe.dSYM/Contents/: Info.plist
tp2-tampons/src/: 00_tp2_tampons.sln  00_tp2_tampons.vcxproj  Aquarium.h  CMakeLists.txt  Camera.h  Etat.cpp  Etat.h  Pipeline.h  Theiere.h  inf2705-forme.h  main.cpp  makefile  nuanceurFragments.glsl  nuanceurGeometrie.glsl  nuanceurSommets.glsl  remise.bat  touches.txt
tp2-tampons/src/build-Darwin/tp2_tampons.exe.dSYM/Contents/: Info.plist
tp3-3lumieres/src/: 00_tp3_3lumieres.sln  00_tp3_3lumieres.vcxproj  CMakeLists.txt  Etat.cpp  Etat.h  inf2705-texture.h  main.cpp  makefile  nuanceurFragments.glsl  nuanceurSommets.glsl  nuanceurSommetsTess.glsl  nuanceurTessCtrl.glsl  nuanceurTessEval.glsl  remise.bat  touches.txt
tp4-panneaux/src/: inf2705-forme.h  main.cpp  nuanceurFragments.glsl  nuanceurGeometrie.glsl  nuanceurSommets.glsl  nuanceurSommetsRetroaction.glsl  remise.bat
tp4-panneaux/src/build-Darwin/tp4_panneaux.exe.dSYM/Contents/: Info.plist
